Fix main screen height on mobile

--- a/app/[lang]/page.module.css
+++ b/app/[lang]/page.module.css
@@ -21,7 +21,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: inherit;
 	background: var(--background);
 	opacity: 0.5;
 }
@@ -156,7 +156,7 @@
 	}
 
 	.main__rect2 {
-		height: 350px;
+		height: 400px;
 		left: 0;
 		rotate: 33deg;
 	}
